name:                yesod-devel
version:             0.1.0.0
synopsis:            Development web server for haskell web frameworks.
description:         Web server for WAI based web applications.
homepage:            https://github.com/urbanslug/yesod-devel
license:             GPL-3
license-file:        LICENSE
author:              Njagi Mwaniki
maintainer:          njagi@urbanslug.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable yesod-devel
  ghc-options:         -rtsopts -O2
  main-is:             Main.hs
  other-modules:       Devel
                     , Devel.Build
                     , Devel.Compile
                     , Devel.Watch
                     , Devel.ReverseProxy
  -- other-extensions: 
  build-depends:       Cabal-ide-backend
                     , Glob
                     , base
                     , bytestring
                     , directory
                     , fsnotify
                     , http-client
                     , http-reverse-proxy
                     , http-types
                     , http-conduit
                     , ide-backend
                     , process
                     , stm
                     , text
                     , wai
                     , warp
                     , blaze-html
                     , shakespeare
                     , network
                     , pretty-show ==1.6.8.2
                     , yesod-devel
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  ghc-options:         -Wall
  exposed-modules:     Devel
                     , Devel.Watch
  other-modules:       Devel.Build
                     , Devel.Compile
                     , Devel.ReverseProxy
  -- other-extensions:
  build-depends:       base
                     , Cabal-ide-backend
                     , Glob
                     , bytestring
                     , directory
                     , fsnotify
                     , http-client
                     , http-reverse-proxy
                     , http-types
                     , http-conduit
                     , ide-backend
                     , process
                     , stm
                     , text
                     , wai
                     , warp
                     , blaze-html
                     , shakespeare
                     , network
                     , pretty-show ==1.6.8.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  -- exposed-modules:   
  other-modules:       Tests.Watch
  hs-source-dirs:      tests
  build-depends:       base
                     , HUnit
                     , tasty
                     , stm
                     , directory
                     , yesod-devel
  default-language:    Haskell2010