name:                wai-devel
version:             0.1.0.0
synopsis:            Development web server for haskell web applications that are wai compliant.
description:         A development server for WAI applications.
homepage:            https://github.com/urbanslug/wai-devel
license:             GPL-3
license-file:        LICENSE
author:              Njagi Mwaniki
maintainer:          njagi@urbanslug.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable yesod-devel
  ghc-options:         -rtsopts -O2
  main-is:             Main.hs
  -- other-modules:     
  -- other-extensions: 
  build-depends:       Cabal-ide-backend >= 1.23
                     , Glob >= 0.7
                     , base >= 4.8
                     , bytestring >= 0.10
                     , directory >= 1.2
                     , fsnotify >= 0.1
                     , http-client >= 0.4
                     , http-reverse-proxy >= 0.4
                     , http-types >= 0.8
                     , http-conduit >= 2.1
                     , ide-backend >= 0.10
                     , process >= 1.2
                     , stm >= 2.4
                     , text >= 1.2
                     , wai >= 3.0
                     , warp >= 3.0
                     , blaze-html >= 0.8
                     , shakespeare >= 2.0
                     , network >= 2.6
                     , optparse-applicative >= 0.11
                     , wai-devel
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  ghc-options:         -Wall
  exposed-modules:     Devel
                     , Devel.Watch
  other-modules:       Devel.Build
                     , Devel.Compile
                     , Devel.ReverseProxy
                     , Devel.Args
  -- other-extensions:
  build-depends:       Cabal-ide-backend >= 1.23
                     , Glob >= 0.7
                     , base >= 4.8
                     , bytestring >= 0.10
                     , directory >= 1.2
                     , fsnotify >= 0.1
                     , http-client >= 0.4
                     , http-reverse-proxy >= 0.4
                     , http-types >= 0.8
                     , http-conduit >= 2.1
                     , ide-backend >= 0.10
                     , process >= 1.2
                     , stm >= 2.4
                     , text >= 1.2
                     , wai >= 3.0
                     , warp >= 3.0
                     , blaze-html >= 0.8
                     , shakespeare >= 2.0
                     , optparse-applicative >= 0.11
                     , network >= 2.6
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  -- exposed-modules:   
  other-modules:       Tests.Watch
  hs-source-dirs:      tests
  build-depends:       base >= 4.8
                     , HUnit >= 1.2
                     , tasty >= 0.10
                     , stm >= 2.4
                     , directory >= 1.2
                     , wai-devel
  default-language:    Haskell2010